--- a/10/index.html
+++ b/10/index.html
@@ -332,7 +332,7 @@ ul.social li{
           	<table role="presentation" border="0" cellpadding="0" cellspacing="0" width="100%">
           		<tr>
           			<td class="logo" style="text-align: center;">
-			            <h1><a href="#">e-Verify</a></h1>
+			            <h1><a href="#">e-Receipt</a></h1>
 			          </td>
           		</tr>
           	</table>
@@ -349,9 +349,9 @@ ul.social li{
             	<tr>
             		<td>
             			<div class="text" style="padding: 0 2.5em; text-align: center;">
-            				<h2>Please verify your email</h2>
-            				<h3>Amazing deals, updates, interesting news right in your inbox</h3>
-            				<p><a href="#" class="btn btn-primary">Yes! Subscribe Me</a></p>
+            				<h2>Dear Customer </h2>
+            				<h3>Thanks for shopping with us, If you have any questions, call us anytime at ( Customer Care Number ), or reply simply to this email.</h3>
+            				<h4> This is a payment receipt provided by  (Bed Quarter Support team).
             			</div>
             		</td>
             	</tr>
