--- a/1/index.html
+++ b/1/index.html
@@ -388,7 +388,7 @@ table{
             			<div class="text" style="padding: 0 3em; text-align: center;">
             				<h2>We Serve Healthy &amp; Delicious Foods</h2>
             				<p>A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country, in which roasted parts of sentences fly into your mouth.</p>
-            				<p><a href="#" class="btn btn-primary">Get Your Order Here!</a></p>
+            				<p><a href="#" class="btn btn-primary"> DONE !</a></p>
             			</div>
             		</td>
             	</tr>
